--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,6 +20,15 @@
     <title>Green Table Farm</title>
   </head>
   <body id="pageTop">
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.12';
+      fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
