changed font to site level css

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,10 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
+    <!-- Site Level Custom CSS -->
+    <!-- To add site-level css, add to site.css located inside css folder in assets -->
+    <link rel="stylesheet" href="./assets/css.site.css">
+
 
     <title>Green Table Farm</title>
   </head>
