--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,7 +18,7 @@
 
     <!-- Site Level Custom CSS -->
     <!-- To add site-level css, add to site.css located inside css folder in assets -->
-    <link rel="stylesheet" href="./assets/css.site.css">
+    <link rel="stylesheet" href="./assets/css/site.css">
 
 
     <title>Green Table Farm</title>
@@ -63,3 +63,4 @@
     </script>
   </body>
 </html>
+
