started template conversion

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./assets/css/site.css">
 
 
-    <title>Green Table Farm</title>
+    <title>Generic Computer Company</title>
   </head>
   <body id="pageTop">
     <div id="fb-root"></div>
